--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=demo
+spring.application.name=RoomBookingApplication
 # 数据库连接配置
-spring.datasource.url=jdbc:mysql://localhost:3306/diicsu_room_booking_system_v2?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/diicsu_room_booking_system_v2?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -10,3 +10,29 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# 禁用安全相关配置
+spring.security.user.name=disabled
+spring.security.user.password=disabled
+
+# 添加详细日志
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
+
+# 确保显式设置端口
+server.port=8080
+
+# 避免Hibernate验证错误
+# spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.validator.apply_to_ddl=false
+
+# 增加 Jackson 配置来处理循环引用
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+spring.jackson.serialization.FAIL_ON_SELF_REFERENCES=false
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+# 如果不想使用 @JsonManagedReference 和 @JsonBackReference，可以启用这个选项
+# spring.jackson.serialization.FAIL_ON_CIRCULAR_REFERENCES=false
+
+# 调试目的
+# logging.level.org.springframework.web=DEBUG
+logging.level.com.fasterxml.jackson=DEBUG
